Began refactoring and cleaning up the MD code