@@ -52,11 +52,8 @@ import ffx.potential.MolecularAssembly;
 import java.io.File;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Random;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 
-import ffx.potential.extended.ExtendedSystem;
 import org.apache.commons.configuration2.CompositeConfiguration;
 
 /**
@@ -81,7 +78,7 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
   private boolean running;
   /** Run time. */
   private long time;
-  /** Obtain all variables with each update (i.e. include velocities, gradients). */
+  /** Obtain all variables with each update (i.e., include velocities, gradients). */
   private boolean getAllVars = true;
   /**
    * Method to run on update for obtaining variables. Will either grab everything (default) or
@@ -113,52 +110,46 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
     List<Potential> potentialStack = new ArrayList<>(potential.getUnderlyingPotentials());
     potentialStack.add(potential);
 
-    List<ForceFieldEnergyOpenMM> feOMM = potentialStack.stream()
+    List<ForceFieldEnergyOpenMM> energyList = potentialStack.stream()
         .filter((Potential p) -> p instanceof ForceFieldEnergyOpenMM)
-        .map((Potential p) -> (ForceFieldEnergyOpenMM) p).collect(Collectors.toList());
-    if (feOMM.size() != 1) {
+        .map((Potential p) -> (ForceFieldEnergyOpenMM) p).toList();
+    if (energyList.size() != 1) {
       logger.severe(format(
-          " Attempting to create a MolecularDynamicsOpenMM with %d OpenMM force field energies: this presently only allows one!",
-          feOMM.size()));
+          " Attempted to create a MolecularDynamicsOpenMM with %d ForceFieldEnergyOpenMM instances.",
+          energyList.size()));
     }
-    forceFieldEnergyOpenMM = feOMM.get(0);
+    forceFieldEnergyOpenMM = energyList.get(0);
 
-    List<Barostat> barostats = potentialStack.stream().filter((Potential p) -> p instanceof Barostat)
-        .map((Potential p) -> (Barostat) p).collect(Collectors.toList());
-    if (barostats.isEmpty()) {
+    List<Barostat> barostatList = potentialStack.stream()
+        .filter((Potential p) -> p instanceof Barostat).map((Potential p) -> (Barostat) p).toList();
+    if (barostatList.isEmpty()) {
       constantPressure = false;
-    } else if (barostats.size() > 1) {
-      logger.severe(format(
-          " Attempting to create a MolecularDynamicsOpenMM with %d barostats: this presently only allows 0-1!",
-          barostats.size()));
+    } else if (barostatList.size() > 1) {
+      logger.severe(
+          format(" Attempting to create a MolecularDynamicsOpenMM with more than 1 barostat (%d).",
+              barostatList.size()));
     } else {
-      barostat = barostats.get(0);
+      barostat = barostatList.get(0);
       barostat.setActive(false);
     }
 
-    // Update set active and inactive atoms.
+    // Update the set of active and inactive atoms.
     forceFieldEnergyOpenMM.setActiveAtoms();
 
     thermostatType = thermostat;
     integratorType = integrator;
     integratorToString(integratorType);
-
-    // Pseudo-random number generator used to seed the OpenMM velocity generator method.
-    Random random = new Random();
-    if (properties.containsKey("velRandomSeed")) {
-      random.setSeed(properties.getInt("velRandomSeed", 0));
-    } else {
-      random.setSeed(0);
-    }
   }
 
   /**
    * {@inheritDoc}
    *
-   * <p>Start sets up context, write out file name, restart file name, sets the integrator and
-   * determines whether the simulation is starting out from a previous molecular dynamics run (.dyn)
-   * or if the initial velocities are determined by a Maxwell Boltzmann distribution. This method
-   * then calls methods openMMUpdate and takeOpenMMSteps to run the molecular dynamics simulation.
+   * <p>Execute <code>numSteps</code> of dynamics using the provided <code>timeStep</code> and
+   * <code>temperature</code>. The <code>printInterval</code> and <code>saveInterval</code>
+   * control logging the state of the system to the console and writing a restart file, respectively.
+   * If the <code>dyn</code> File is not null, the simulation will be initialized from the contents.
+   * If the <code>iniVelocities</code> is true, the velocities will be initialized from a Maxwell
+   * Boltzmann distribution.
    */
   @Override
   public void dynamic(long numSteps, double timeStep, double printInterval, double saveInterval,
@@ -169,6 +160,7 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
       return;
     }
 
+    // Call the init method.
     init(numSteps, timeStep, printInterval, saveInterval, fileType, restartInterval, temperature,
         initVelocities, dyn);
 
@@ -212,7 +204,7 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
   /**
    * Setter for the field <code>intervalSteps</code>.
    *
-   * @param intervalSteps a int.
+   * @param intervalSteps The number of interval steps.
    */
   @Override
   public void setIntervalSteps(int intervalSteps) {
@@ -243,9 +235,8 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
     }
 
     if (constantPressure) {
-      // Add an isotropic Monte Carlo barostat, or if already present update its target temperature,
-      // pressure
-      // and frequency.
+      // Add an isotropic Monte Carlo barostat.
+      // If it is already present, update its target temperature, pressure and frequency.
       double pressure = barostat.getPressure();
       int frequency = barostat.getMeanBarostatInterval();
       system.addMonteCarloBarostatForce(pressure, targetTemperature, frequency);
@@ -257,6 +248,7 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
       system.addCOMMRemoverForce();
     }
 
+    // Set the current value of lambda.
     forceFieldEnergyOpenMM.setLambda(forceFieldEnergyOpenMM.getLambda());
   }
 
@@ -400,9 +392,6 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
 
     obtainVariables.run();
 
-    double defaultDeltaPEThresh = 1.0E6;
-    detectAtypicalEnergy(priorPE, defaultDeltaPEThresh);
-
     if (running) {
       if (i == 0) {
         logger.log(basicLogging,
@@ -433,23 +422,10 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
       logger.info(" An integrator was not specified. Verlet will be used.");
     } else {
       switch (integratorType) {
-        case VERLET:
-        case VELOCITY_VERLET:
-        default:
-          integratorString = "VERLET";
-          break;
-        case STOCHASTIC:
-        case LANGEVIN:
-          integratorString = "LANGEVIN";
-          break;
-        case RESPA:
-        case MTS:
-          integratorString = "MTS";
-          break;
-        case STOCHASTIC_MTS:
-        case LANGEVIN_MTS:
-          integratorString = "LANGEVIN-MTS";
-          break;
+        default -> integratorString = "VERLET";
+        case STOCHASTIC, LANGEVIN -> integratorString = "LANGEVIN";
+        case RESPA, MTS -> integratorString = "MTS";
+        case STOCHASTIC_MTS, LANGEVIN_MTS -> integratorString = "LANGEVIN-MTS";
       }
     }
   }
